--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "saucedemo-playwright",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,6 +12,5 @@
   "license": "ISC",
   "devDependencies": {
     "playwright": "^1.54.2"
-  },
-  "type": "module"
+  }
 }
